current time pointer - past time indicator + calcOverlapping bugfix

--- a/frontend/src/views/calendar/calendar.css
+++ b/frontend/src/views/calendar/calendar.css
@@ -1,4 +1,4 @@
-.day-view {
+.calendar-view {
     display: flex;
     flex-direction: row;
     align-items: stretch;
